[package]
name = "cln-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
clap = { version = "3.2.17", features = ["derive"] }
prost = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.20.1", features = ["full"] }
tonic = "0.8.0"

[build-dependencies]
tonic-build = "0.8.0"
